use std::sync::Arc;
use std::time::{Duration, Instant};
use anyhow::Result;
use tokio::sync::{mpsc, Semaphore};
use tracing::{info, warn, error, debug};
use futures::future::try_join_all;
use arrow::record_batch::RecordBatch;
use crossbeam::queue::SegQueue;
use std::sync::atomic::{AtomicU64, AtomicBool, Ordering};

use openwit_proto::ingestion::{
    telemetry_ingestion_service_server::TelemetryIngestionService,
    TelemetryIngestRequest, TelemetryIngestResponse, TelemetryIngestStatus,
};

/// High-performance ingestion receiver optimized for <1s latency
pub struct HighPerformanceIngestionReceiver {
    /// Number of parallel workers
    parallel_workers: usize,

    /// Queue for incoming batches
    batch_queue: Arc<SegQueue<IncomingBatch>>,

    /// Semaphore to limit concurrent processing
    processing_semaphore: Arc<Semaphore>,

    /// Storage client pool for parallel writes
    storage_clients: Arc<Vec<StorageClient>>,

    /// Metrics
    metrics: Arc<IngestionMetrics>,

    /// Configuration
    config: IngestionConfig,
}

#[derive(Clone)]
pub struct IngestionConfig {
    /// Target max latency in milliseconds
    pub max_latency_ms: u64,

    /// Min and max batch sizes
    pub min_batch_size: usize,
    pub max_batch_size: usize,

    /// Number of parallel workers
    pub parallel_workers: usize,

    /// Enable optimizations
    pub use_zero_copy: bool,
    pub use_simd_json: bool,

    /// Batching strategy
    pub adaptive_batching: bool,
}

impl Default for IngestionConfig {
    fn default() -> Self {
        Self {
            max_latency_ms: 100,  // 100ms target
            min_batch_size: 10,
            max_batch_size: 100,
            parallel_workers: num_cpus::get(),
            use_zero_copy: true,
            use_simd_json: true,
            adaptive_batching: true,
        }
    }
}

pub struct IncomingBatch {
    pub id: String,
    pub client_id: String,
    pub data: Vec<u8>,
    pub received_at: Instant,
    pub message_count: usize,
}

pub struct StorageClient {
    endpoint: String,
    client: Arc<dyn ArrowFlightClient>,
}

pub struct IngestionMetrics {
    pub batches_processed: AtomicU64,
    pub messages_processed: AtomicU64,
    pub bytes_processed: AtomicU64,
    pub errors: AtomicU64,

    // Latency tracking (in microseconds)
    pub total_latency_us: AtomicU64,
    pub processing_latency_us: AtomicU64,
    pub storage_latency_us: AtomicU64,

    // Current state
    pub queue_depth: AtomicU64,
    pub active_workers: AtomicU64,
}

impl HighPerformanceIngestionReceiver {
    pub fn new(config: IngestionConfig) -> Result<Self> {
        let parallel_workers = config.parallel_workers;

        Ok(Self {
            parallel_workers,
            batch_queue: Arc::new(SegQueue::new()),
            processing_semaphore: Arc::new(Semaphore::new(parallel_workers)),
            storage_clients: Arc::new(Self::create_storage_clients(parallel_workers)?),
            metrics: Arc::new(IngestionMetrics::default()),
            config,
        })
    }

    /// Create a pool of storage clients for parallel writes
    fn create_storage_clients(count: usize) -> Result<Vec<StorageClient>> {
        let mut clients = Vec::with_capacity(count);
        for _ in 0..count {
            // Create storage client
            // This would connect to your storage service
            clients.push(StorageClient {
                endpoint: std::env::var("STORAGE_ENDPOINT").unwrap_or_else(|_| "localhost:9401".to_string()),
                client: Arc::new(create_arrow_flight_client()?),
            });
        }
        Ok(clients)
    }

    /// Main entry point for processing batches
    pub async fn process_batch(&self, batch: IncomingBatch) -> Result<()> {
        let start = Instant::now();

        // Add to queue
        self.batch_queue.push(batch);
        self.metrics.queue_depth.fetch_add(1, Ordering::Relaxed);

        // Trigger processing if we have workers available
        self.trigger_processing().await?;

        // Record metrics
        let latency = start.elapsed().as_micros() as u64;
        self.metrics.total_latency_us.fetch_add(latency, Ordering::Relaxed);

        Ok(())
    }

    /// Process batches from the queue in parallel
    async fn trigger_processing(&self) -> Result<()> {
        let available_workers = self.processing_semaphore.available_permits();

        if available_workers > 0 {
            // Spawn workers up to available permits
            for _ in 0..available_workers.min(self.batch_queue.len()) {
                let queue = Arc::clone(&self.batch_queue);
                let semaphore = Arc::clone(&self.processing_semaphore);
                let storage_clients = Arc::clone(&self.storage_clients);
                let metrics = Arc::clone(&self.metrics);
                let config = self.config.clone();

                tokio::spawn(async move {
                    let _permit = semaphore.acquire().await.unwrap();
                    metrics.active_workers.fetch_add(1, Ordering::Relaxed);

                    if let Some(batch) = queue.pop() {
                        metrics.queue_depth.fetch_sub(1, Ordering::Relaxed);

                        if let Err(e) = Self::process_single_batch(
                            batch,
                            &storage_clients,
                            &metrics,
                            &config,
                        ).await {
                            error!("Failed to process batch: {}", e);
                            metrics.errors.fetch_add(1, Ordering::Relaxed);
                        }
                    }

                    metrics.active_workers.fetch_sub(1, Ordering::Relaxed);
                });
            }
        }

        Ok(())
    }

    /// Process a single batch
    async fn process_single_batch(
        batch: IncomingBatch,
        storage_clients: &[StorageClient],
        metrics: &IngestionMetrics,
        config: &IngestionConfig,
    ) -> Result<()> {
        let process_start = Instant::now();

        // Check if batch is too old
        let age = batch.received_at.elapsed();
        if age.as_millis() > config.max_latency_ms as u128 {
            warn!(
                "Batch {} is too old: {:?}, processing anyway",
                batch.id, age
            );
        }

        // Parse and transform data
        let arrow_batch = if config.use_zero_copy {
            Self::parse_to_arrow_zero_copy(&batch.data)?
        } else {
            Self::parse_to_arrow_standard(&batch.data)?
        };

        let processing_time = process_start.elapsed().as_micros() as u64;
        metrics.processing_latency_us.fetch_add(processing_time, Ordering::Relaxed);

        // Send to storage (round-robin across clients)
        let storage_start = Instant::now();
        let client_index = metrics.batches_processed.load(Ordering::Relaxed) as usize % storage_clients.len();
        let storage_client = &storage_clients[client_index];

        Self::send_to_storage(storage_client, &batch.id, &batch.client_id, arrow_batch).await?;

        let storage_time = storage_start.elapsed().as_micros() as u64;
        metrics.storage_latency_us.fetch_add(storage_time, Ordering::Relaxed);

        // Update metrics
        metrics.batches_processed.fetch_add(1, Ordering::Relaxed);
        metrics.messages_processed.fetch_add(batch.message_count as u64, Ordering::Relaxed);
        metrics.bytes_processed.fetch_add(batch.data.len() as u64, Ordering::Relaxed);

        let total_time = batch.received_at.elapsed();
        info!(
            "Processed batch {} in {:?} (processing: {}μs, storage: {}μs)",
            batch.id,
            total_time,
            processing_time,
            storage_time
        );

        Ok(())
    }

    /// Parse data to Arrow with zero-copy optimization
    fn parse_to_arrow_zero_copy(data: &[u8]) -> Result<RecordBatch> {
        // Implementation would use Arrow's zero-copy builders
        // This is a simplified version
        todo!("Implement zero-copy Arrow conversion")
    }

    /// Standard parsing to Arrow
    fn parse_to_arrow_standard(data: &[u8]) -> Result<RecordBatch> {
        // Standard Arrow conversion
        todo!("Implement standard Arrow conversion")
    }

    /// Send batch to storage
    async fn send_to_storage(
        client: &StorageClient,
        batch_id: &str,
        client_id: &str,
        batch: RecordBatch,
    ) -> Result<()> {
        // Send via Arrow Flight
        debug!(
            "Sending batch {} for client {} to storage at {}",
            batch_id, client_id, client.endpoint
        );

        // Implementation would call Arrow Flight client
        todo!("Implement Arrow Flight send")
    }

    /// Get current metrics snapshot
    pub fn metrics(&self) -> MetricsSnapshot {
        MetricsSnapshot {
            batches_processed: self.metrics.batches_processed.load(Ordering::Relaxed),
            messages_processed: self.metrics.messages_processed.load(Ordering::Relaxed),
            bytes_processed: self.metrics.bytes_processed.load(Ordering::Relaxed),
            errors: self.metrics.errors.load(Ordering::Relaxed),
            queue_depth: self.metrics.queue_depth.load(Ordering::Relaxed),
            active_workers: self.metrics.active_workers.load(Ordering::Relaxed),
            avg_total_latency_us: self.calculate_avg_latency(),
        }
    }

    fn calculate_avg_latency(&self) -> u64 {
        let total = self.metrics.total_latency_us.load(Ordering::Relaxed);
        let count = self.metrics.batches_processed.load(Ordering::Relaxed);

        if count > 0 {
            total / count
        } else {
            0
        }
    }
}

#[derive(Debug, Clone)]
pub struct MetricsSnapshot {
    pub batches_processed: u64,
    pub messages_processed: u64,
    pub bytes_processed: u64,
    pub errors: u64,
    pub queue_depth: u64,
    pub active_workers: u64,
    pub avg_total_latency_us: u64,
}

impl MetricsSnapshot {
    pub fn avg_latency_ms(&self) -> f64 {
        self.avg_total_latency_us as f64 / 1000.0
    }

    pub fn throughput_mbs(&self, duration_secs: f64) -> f64 {
        if duration_secs > 0.0 {
            (self.bytes_processed as f64 / 1_048_576.0) / duration_secs
        } else {
            0.0
        }
    }
}

// Placeholder for actual Arrow Flight client
trait ArrowFlightClient: Send + Sync {
    // Arrow Flight methods
}

struct DummyArrowFlightClient;

impl ArrowFlightClient for DummyArrowFlightClient {
    // Implement required methods here when needed
}

fn create_arrow_flight_client() -> Result<DummyArrowFlightClient> {
    Ok(DummyArrowFlightClient)
}

impl Default for IngestionMetrics {
    fn default() -> Self {
        Self {
            batches_processed: AtomicU64::new(0),
            messages_processed: AtomicU64::new(0),
            bytes_processed: AtomicU64::new(0),
            errors: AtomicU64::new(0),
            total_latency_us: AtomicU64::new(0),
            processing_latency_us: AtomicU64::new(0),
            storage_latency_us: AtomicU64::new(0),
            queue_depth: AtomicU64::new(0),
            active_workers: AtomicU64::new(0),
        }
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_parallel_processing() {
        let config = IngestionConfig {
            parallel_workers: 4,
            ..Default::default()
        };

        let receiver = HighPerformanceIngestionReceiver::new(config).unwrap();

        // Simulate multiple batches
        for i in 0..10 {
            let batch = IncomingBatch {
                id: format!("batch-{}", i),
                client_id: "test-client".to_string(),
                data: vec![0u8; 1024],
                received_at: Instant::now(),
                message_count: 100,
            };

            receiver.process_batch(batch).await.unwrap();
        }

        // Check metrics
        tokio::time::sleep(Duration::from_millis(100)).await;
        let metrics = receiver.metrics();

        assert!(metrics.queue_depth <= 10);
        assert!(metrics.active_workers <= 4);
    }
}